--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,3 +24,12 @@ jobs:
 
       - name: Test
         run: npm run test
+
+      - name: Set up JDK 8
+        uses: actions/setup-java@v2
+        with:
+          java-version: '8'
+          distribution: 'adopt'
+
+      - name: Build with Maven
+        run: mvn --batch-mode --update-snapshots package
