--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,15 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Set up JDK 8
+        uses: actions/setup-java@v2
+        with:
+          java-version: '8'
+          distribution: 'adopt'
+
+      - name: Build with Maven
+        run: mvn --batch-mode --update-snapshots package
+
       - name: Install dependencies
         run: npm install
 
@@ -25,11 +34,8 @@ jobs:
       - name: Test
         run: npm run test
 
-      - name: Set up JDK 8
-        uses: actions/setup-java@v2
+      - name: Publish Unit Test Results
+        uses: EnricoMi/publish-unit-test-result-action@v1
+        if: always()
         with:
-          java-version: '8'
-          distribution: 'adopt'
-
-      - name: Build with Maven
-        run: mvn --batch-mode --update-snapshots package
+          files: target/**/*.xml
